src/test/ui/borrowck/issue-81365-3.stderr
error[E0506]: cannot assign to `self.container.container_field` because it is borrowed
  --> $DIR/issue-81365-3.rs:32:9
   |
LL |         let first = &self.target_field;
   |                      ---- borrow of `self.container.container_field` occurs here
LL |         self.container.container_field = true;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `self.container.container_field` occurs here
LL |         first;
   |         ----- borrow later used here
   |
   = note: borrow occurs due to deref coercion to `Container`
note: deref defined here
  --> $DIR/issue-81365-3.rs:23:5
   |
LL |     type Target = Container;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0506`.
